# RepTate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows.disabled/: contract-tests.yml  docs.yml  progressive-rollout.yml
RepTate/core/: __init__.py
RepTate/core/compute/: hardware.py  service_api.py
RepTate/core/data/: dataset_io.py
RepTate/core/fitting/: fit_results.py  nlsq_fit.py  nlsq_optimize.py
RepTate/core/models/: results.py
RepTate/gui/: QApplicationWindow.py  QTheory.py  __init__.py
RepTate/gui/controllers/: export_controller.py  fit_controller.py
RepTate/gui/views/: plot_views.py  summary_view.py
RepTate/theories/: SmoothPolySTRAND.py  TheoryShanbhagMaxwellModes.py  TheoryTTS.py  TheoryTTS_Automatic.py
RepTate/tools/: ToolFindPeaks.py
docs/: DOCUMENTATION_INDEX.md  architecture.md  contributing.md  fitting-workflow.md  logging.md  ui-guide.md  validation.md
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/architecture/: README.md  data_flow.rst  dependencies.rst  dependency_analysis.md  dependency_graph.mmd  migration_strategy.md  overview.rst
docs/source/developers/: LESSONS_LEARNED.rst  MIGRATION_GUIDE_DETAILED.rst  MODERNIZATION_ARCHITECTURE.rst  ONBOARDING_GUIDE.rst  developers.rst  (+6 more)
examples/: strangler_fig_example.py
scripts/: analyze_dependencies.py  analyze_docs.py  analyze_new_modules.py  check_class_complexity.py  find_orphaned_data_files.py  migrate_pickle_files.py  rollout_monitoring_config.py  verify_pickle_removal.py  verify_safe_eval_only.py  verify_scipy_removal.py
scripts/bench/: bench_nlsq.py  bench_nuts.py  validate_full_precision.py
scripts/validate/: headless_theory_smoke.py
specs/001-jax-nlsq-modernization/: quickstart.md  tasks.md
src/RepTate/: MatDB.py  RepTate.py  UV.py  __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_data_loading.py
tests/benchmarks/: README.md  __init__.py  test_benchmark_fitting.py  test_benchmark_interpolation.py  test_benchmark_io.py  test_benchmark_theory.py  test_jit_performance.py
tests/characterization/: __init__.py  test_qapplicationwindow.py  test_qtheory.py
tests/contracts/: README.md  __init__.py  conftest.py  test_api_contracts.py  test_baseline_storage.py  test_compatibility_contracts.py  test_data_contracts.py  test_performance_contracts.py
tests/gui/: test_accessibility.py  test_batch_update.py  test_blitting.py  test_external_links.py  test_figure_cache.py  test_lazy_loading.py
tests/integration/: __init__.py  test_data_loading.py  test_file_loading.py  test_fit_workflow.py  test_nuts_workflow.py
tests/regression/: __init__.py  benchmark_export_timing.py  benchmark_fit_timing.py  generate_golden.py  test_fit_precision.py  test_numerical_equivalence.py  validate_fit_precision.py  validate_inference_precision.py
tests/security/: __init__.py  test_code_injection.py  test_path_traversal.py
tests/unit/: __init__.py  test_applications_migration.py  test_interfaces.py  test_optax_import.py  test_scipy_migration_core.py  test_strangler_fig.py  test_tools_migration.py
(+214 files in other folders)
